finalizing login and register function
